# AllocNet

./: .gitignore  LICENSE  README.md
network/: CMakeLists_Iris.txt  requirements.txt  sample_on_multiple_maps.py  sample_on_single_map.py  sample_trajs.py  sample_trajs_on_multiple_map.py  setup.py  test_minsnap_model.py  test_minsnap_model_conv.py  test_minsnap_model_conv_lstm.py  test_minsnap_model_conv_lstm_batch.py  train_minsnap.py  train_minsnap_conv.py  train_minsnap_conv_lstm.py  train_minsnap_conv_lstm_as.py  train_minsnap_conv_mlp_as.py  ts_conversion_conv_lstm.py  ts_conversion_conv_mlp.py
network/configs/: minsnap_conv_lstm_params.yaml  minsnap_conv_params.yaml  minsnap_params.yaml  multi_map_lstm_test.yaml  single_map_lstm_test.yaml
network/utils/: corridor_generator.py  min_traj_opt.py  params.yaml  pcd_segmentation.py  rrt3D.py  trajectory.py
network/utils/learning/: corridor_generation_networks.py  datasets copy.py  datasets.py  layers.py  minsnap_network.py  minsnap_network_conv.py  minsnap_network_conv_lstm.py  minsnap_network_conv_lstm_as.py  minsnap_network_conv_mlp_as.py  minsnap_network_conv_mlp_as_ts.py
network/utils/sampling/: min_traj_opt.py  params.yaml
src/: utils.rosinstall
src/planner/: CMakeLists.txt  package.xml
src/planner/config/: planner.rviz  planner.yaml
src/planner/include/gcopter/: geo_utils.hpp  sfc_gen.hpp  trajectory.hpp  visualizer.hpp  voxel_map.hpp
src/planner/include/planner/: learning_planner.hpp  qp_solver.hpp
src/planner/launch/: learning_planning.launch
src/planner/models/: seq10_rest2rest.pt  seq5_rest2rest.pt  seq5_tokenthresh0_35.pt  seq5_tokenthresh0_35_cpu.pt  test.py
src/planner/src/: learning_planning.cpp
